# GameScore

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 9a874cb4af98_replace_price_with_rating_in_product.py
gamescore/: main.py  templates.py
gamescore/api_v1/: __init__.py
gamescore/api_v1/admin/: views.py  views_games.py  views_users.py
gamescore/api_v1/auth/: __init__.py  config.py  crud.py  dependencies.py  security.py  views.py
gamescore/api_v1/games/: crud.py  dependencies.py  views.py
gamescore/api_v1/rawg/: client.py  service.py  views.py
gamescore/api_v1/users/: crud.py  dependencies.py  views.py  views_user_games.py
gamescore/core/: config.py  db.py
gamescore/core/entities/: games.py  genres.py  users.py
gamescore/core/models/: __init__.py  associations.py  base.py  db_helper.py  (+4 more)
gamescore/middleware/: middleware.py
gamescore/middlewares/: current_user.py
gamescore/pages/: __init__.py  games.py  home.py  login.py  me.py  my_games.py
gamescore/templates/: base.html  catalog_base.html  games.html  games_list_container.html  index.html  login.html  me.html  my_games.html  my_games_list_container.html
gamescore/tests/: conftest.py  test_api.py  test_db_helper.py  utils.py
microshop/: items_views.py  main.py
microshop/api_v1/: __init__.py
microshop/core/: config.py  db.py
microshop/pages/: __init__.py  games.py
microshop/templates/: games.html  games_list_container.html  index.html
tests/: conftest.py  test_api.py  test_db_helper.py  utils.py
(+29 files in other folders)
